# InternetTraffic

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  a.py  main.py
itrafficpy/: CMakeLists.txt  __init__.py  itrafficpy.cpp  itrafficpy.h  solution.py  test.py
pyengine/: __init__.py  solution.py  test.py
server/: manage.py
server/InternetTraffic/: settings.py  urls.py  wsgi.py
server/home/: api.py  urls.py  views.py
server/home/static/css/: style.css
server/home/static/js/: map.js
server/home/templates/: index.html
src/: CMakeLists.txt  Car.cpp  Car.h  Const.h  InternetTraffic.cpp  InternetTraffic.h  Location.cpp  Location.h  Map.cpp  Map.h  Node.cpp  Node.h  Solution.cpp  Solution.h  extern.cpp  extern.h  main.cpp
